--- a/style.css
+++ b/style.css
@@ -14012,10 +14012,11 @@ section.product .product__block-recommend {
   font-family: "Sen", sans-serif;
   border: 1px solid #101b51;
   border-radius: 35px;
+  height: 60px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 10px 20px;
+  padding: 0 20px;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -14032,6 +14033,7 @@ section.product .product__block-recommend {
 
 .company__tab .company__payment-inputs input {
   min-width: 60px;
+  height: 100%;
   font-family: "Sen", sans-serif;
   font-weight: 600;
   font-size: 2.25rem;
